# openrig

./: .gitignore  BUILDING.md  CMakeLists.txt  DaveCore.jucer  DaveCore_Wishlist.md  GETTING_STARTED.md  LICENSE  README.md  architecture-review-zai52.md  build_davecore.bat  color-theme-plan.md  get_sources.ps1  july-3-updates.md  setup_projucer.bat  update_includes.ps1
.github/workflows/: build.yml
.kilo/plans/: 1783281172791-midi-effects-transposer.md  1783358234861-fader-learn-note-typing.md  1783358234861-sampler-juce8-compile-fixes.md
DaveCoreProject/: DaveCore.jucer  add_to_vcxproj.ps1  rename_to_openrig.ps1
DaveCoreProject/JuceLibraryCode/: AppConfig.h  JuceHeader.h
DaveCoreProject/Source/: ArpeggiatorComponent.h  AssetLoader.cpp  BinaryData.h  BoutiqueLookAndFeel.cpp  BoutiqueLookAndFeel.h  CCMappingComponent.h  ChannelStripComponent.h  ConfigModalOverlay.cpp  ConfigModalOverlay.h  LEDIndicator.h  LibraryPanel.cpp  LibraryPanel.h  LoadingOverlay.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiEffectsComponent.h  MidiMonitorComponent.h  NoteRangeComponent.h  OctaveHarmonizer.h  OpenRigConstants.h  OpenRigEngine.h  RackSlot.h  RackSlotComponent.cpp  RackSlotComponent.h  RigBuilder.cpp  RigBuilder.h  RigSerializer.cpp  RigSerializer.h  RigTransitioner.h  SamplerComponent.h  SamplerProcessor.h  Scene.h  SetlistManager.h  SetlistPanel.h  SetupBuilderOverlay.h  SetupMidiTriggers.h  SimpleArpeggiator.h  Theme.h  Version.h  (+1 more)
JuceLibraryCode/: AppConfig.h  JuceHeader.h  include_juce_dsp.cpp
Source/: AnalogVuMeter.h  ArpeggiatorComponent.h  AssetLoader.cpp  AssetLoader.h  BoutiqueLookAndFeel.cpp  CCMappingComponent.h  ChannelStripComponent.h  ChannelStripProcessor.h  IMidiNoteLearner.h  LEDIndicator.h  LibraryPanel.h  LoadingOverlay.h  Logger.h  MainComponent.cpp  MainComponent.h  MidiEffectsComponent.h  MidiLearnBus.h  MidiMonitorComponent.h  NoteRangeComponent.h  OctaveHarmonizer.h  OpenRigConstants.h  OpenRigEngine.h  OpenRigEngine_Sequential.h  RackSlot.h  RackSlotComponent.cpp  RackSlotComponent.h  RigBuilder.h  RigLibrary.h  RigModel.h  RigSerializer.cpp  RigTransitioner.cpp  RigTransitioner.h  SamplerProcessor.h  Scene.h  SetlistPanel.h  SetupBuilderOverlay.h  SimpleArpeggiator.h  ThemeManager.h  WaveformSpliceEditor.h
_archive/Source_old/: DaveCoreEngine.h  MainComponent.cpp  MainComponent.h  RackSlot.h  RackSlotComponent.h  Scene.h
docs/: index.html
pacman/: pacman-glm5.html
